Some CSS work just making items throughout the page align correctly

--- a/src/components/about/About.scss
+++ b/src/components/about/About.scss
@@ -52,7 +52,7 @@
             font-size: 16px;
             line-height: 28px;
 
-            max-width: 700px;
+            max-width: 520px;
 
             h3 {
                 margin: 0;
