--- a/src/components/experience/Experience.css
+++ b/src/components/experience/Experience.css
@@ -56,9 +56,10 @@ body {
     padding: 50px 0; }
     .experience .experience-content .experience-list .experience-item {
       background: #fff;
-      width: 75%;
+      width: 85%;
       margin: 0 auto;
-      padding: 15px 20px;
+      padding: 40px 30px;
+      box-sizing: border-box;
       border: 1px solid #333;
       box-shadow: 1px 1px 4px 1px #ccc; }
       .experience .experience-content .experience-list .experience-item:first-child {
