--- a/src/components/portfolio/Portfolio.scss
+++ b/src/components/portfolio/Portfolio.scss
@@ -20,21 +20,25 @@
         .portfolio-list {
             text-align: left;
             padding: 50px 0;
+
+            width: 86%;
+            margin: 0 auto;
+            height: 960px;
+
             display: flex;
+            justify-content: space-between;
             flex-direction: column;
             flex-wrap: wrap;
-            height: 960px;
-            justify-content: space-between;
 
             .portfolio-item {
                 background: #fff;
-                width: 46%;
+
+                width: 48%;
                 box-sizing: border-box;
                 height: 300px;
                 display: block;
 
-                margin: 0 auto;
-
+                margin: 0 1%;
                 padding: 15px 20px;
 
                 border: 1px solid #333;
